@@ -10,6 +10,7 @@
 * Added missing variable declarations.
 * Added missing scopes on methods.
 * Improved several code sections for clarity.
+* Fixed the "Order by ..." option in the Document Children widget couldn't be changed.
 
 = 1.7.0 =
 * WordPress 5.2 compatible.
